# snyk-org-repo-mapper

./: .gitignore  README.md  pyproject.toml
openspec/: project.md
openspec/changes/fix-dockerfile-project-type-filter/: design.md  proposal.md  tasks.md
openspec/changes/github-discovery/: design.md  proposal.md  tasks.md
openspec/specs/bitbucket-empty-repos/: spec.md
openspec/specs/branch-mismatch-target-reimport/: spec.md
openspec/specs/broker-org-apply/: spec.md
openspec/specs/broker-org-plan/: spec.md
openspec/specs/http-transport-retries/: spec.md
openspec/specs/snyk-import-enrichment/: spec.md
openspec/specs/three-stage-snyk-pipeline/: spec.md
openspec/specs/universal-broker-read/: spec.md
scripts/: branch_diff.py  lookup_target_reference.py  reimport_mismatched_targets.py
src/: main.py
src/commands/: __init__.py  bitbucket_cli.py  discovery_helpers.py  dispatch.py  github_cli.py  snyk_broker_apply_cli.py  snyk_broker_integration_settings_cli.py  snyk_broker_plan_cli.py  snyk_import_cli.py  snyk_orgs_cli.py  snyk_post_import_cleanup_cli.py  spreadsheet_cli.py
src/common/: __init__.py  appsec_yaml.py  discovery_document.py  empty_repos_document.py  github_mapper.py  mapper.py  output_state.py
src/common/spreadsheet/: __init__.py  bb_repo_mapping.py  mapping.py  xlsx.py
src/config/: __init__.py  github_settings.py  snyk_settings.py
src/integrations/: __init__.py  http_retry.py
src/snyk/: __init__.py  branch_mismatch_reimport.py  broker_apply.py  broker_integration_settings.py  broker_plan.py  enrichment.py  integration_settings_apply.py  integration_settings_defaults.py  outputs.py  post_import_cleanup.py  project_context.py  python_language_settings_defaults.py
tests/: test_appsec_yaml.py  test_bb_repo_mapping.py  test_bitbucket_client_commits.py  test_bitbucket_helpers.py  test_branch_mismatch_reimport.py  test_broker_apply.py  test_broker_client_helpers.py  test_broker_client_http.py  test_broker_client_list_connections.py  test_broker_integration_settings.py  test_broker_plan.py  test_broker_settings.py  test_cli_spreadsheet_hint.py  test_config.py  test_discovery_document.py  test_dispatch_cli.py  test_empty_repos_document.py  test_github_cli.py  test_github_client.py  test_github_mapper.py  test_http_retry.py  test_integration_http_retries.py  test_mapper.py  test_output_state.py  test_post_import_cleanup.py  test_project_context.py  test_snyk_broker_plan_cli.py  test_snyk_client_integration_settings.py  test_snyk_client_post_import_cleanup.py  test_snyk_client_python_language_settings.py  test_snyk_client_targets.py  test_snyk_client_v1.py  test_snyk_enrichment.py  test_snyk_import_cli.py  test_snyk_orgs_cli.py  test_snyk_outputs.py  test_snyk_settings.py  test_spreadsheet_cli.py  test_spreadsheet_mapping.py  test_spreadsheet_xlsx.py
(+75 files in other folders)
