[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket-org-repo-mapper"
version = "0.1.0"
description = "Map Bitbucket Server repositories to AppSec metadata from YAML and API data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
repo-mapper-discover-bitbucket = "commands.dispatch:main_discover_bitbucket"
repo-mapper-discover-spreadsheet = "commands.dispatch:main_discover_spreadsheet"
repo-mapper-snyk-orgs = "commands.dispatch:main_snyk_orgs"
repo-mapper-snyk-import = "commands.dispatch:main_snyk_import"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
